# ggtest

./: .dockerignore  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: AddGoogleTest.cmake
etc/: cflags.cmake
src/: CMakeLists.txt  add.h  calculator.cpp  calculator.h  cirqueue.cpp  cirqueue.h  run_app.cpp
test/: CMakeLists.txt  test_add.cpp  test_calc.cpp  test_cirqueue.cpp  test_run_app.cpp
